# LangGraph-Forge

./: README.md
mini_App-Langgraph/: README.md  gitignore.txt  pyproject.toml  run_project.py
mini_App-Langgraph/agent/: graph.py  prompts.py  states.py  tools.py  visualize.py
mini_App-Langgraph/agent/generated_project/: README.md  index.html  script.js  style.css  styles.css
mini_App-Langgraph/agent/generated_project/components/: About.js  Contact.js  Project.js  Section.js
mini_App-Langgraph/agent/generated_project/data/: experiences.json  projects.json
mini_App-Langgraph/project_made/generated_project_calc/: index.html  package-lock.json  script.js  style.css
mini_App-Langgraph/project_made/generated_project_login_page/: README.md  index.html  styles.css
mini_App-Langgraph/project_made/generated_project_portfolio/: index.html  styles.css
